<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding8">

    <EditText
        android:id="@+id/tv_add_note_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/note_head" />

    <EditText
        android:id="@+id/tv_note_add_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_body" />

    <Button
        android:id="@+id/btn_note_add_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />

    <ProgressBar
        android:id="@+id/pb_note_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />


</LinearLayout>

